5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1592_1803.log
== TEST (2019-04-17 14:01:01) 
-- CODE:
x = int(input"digitos: ")

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*5) + (h*4) + (g*3)+ (k*2)
dg = soma % 11

print(dg)
-- ERROR:
File "XXXX", line 1
    x = int(input"digitos: ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:01:27) 
-- CODE:
x = int(input("digitos: ")

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*5) + (h*4) + (g*3)+ (k*2)
dg = soma % 11

print(dg)
-- ERROR:
File "XXXX", line 3
    l = x % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:01:49) 
-- CODE:
x = int(input("digitos: ")

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*5) + (h*4) + (g*3)+ (k*2)
dg = soma % 11

print(dg)
-- ERROR:
File "XXXX", line 3
    l = x % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:02:02) 
-- CODE:
x = int(input("digitos: ")

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*5) + (h*4) + (g*3)+ (k*2)
dg = soma % 11

print(dg)
-- ERROR:
File "XXXX", line 3
    l = x % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:02:17) 
-- CODE:
x = int(input("digitos: "))

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*5) + (h*4) + (g*3)+ (k*2)
dg = soma % 11

print(dg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma(l*5) + (h*4) + (g*3)+ (k*2)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:02:54) 
-- CODE:
x = int(input("digitos: "))

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma(l*2) + (h*3) + (g*4)+ (k*5)
dg = soma % 11

print(dg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma(l*2) + (h*3) + (g*4)+ (k*5)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:03:18) 
-- CODE:
x = int(input("digitos: "))

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma = (l*2) + (h*3) + (g*4)+ (k*5)
dg = soma % 11

print(dg)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:03:28) 
-- CODE:
x = int(input("digitos: "))

l = x % 10
h = x % 100
g = x % 1000
k = x % 10000

soma = (l*2) + (h*3) + (g*4)+ (k*5)
dg = soma % 11

print(dg)
-- EXECUTION TIME:
0.164942
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:06:16) 
-- CODE:
x = int(input("digitos: "))

l = x % 10
h = (x // 10) % 10
g = (x // 100) % 10
k = (x // 1000) % 10

soma = (l*2) + (h*3) + (g*4)+ (k*5)
dg = soma % 11

print(dg)
-- EXECUTION TIME:
0.186694
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
